Broadcast was implemented. Vector API tests were disabled.